name:                hmatrix-test
version:             0.1.0.0
author:              Chris Hodapp
maintainer:          chodapp3@gatech.edu
copyright:           2016 Chris Hodapp
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
                     
executable test
  -- hs-source-dirs:      app
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hmatrix
                     , hmatrix-glpk
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@bitbucket.org:hodapp87/rldm-proj2-ce-q.git
